--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -32,23 +32,23 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.ejb.entitymanager_factory_name=
 
 
+#common.db.driver.class=com.mysql.jdbc.Driver
+#common.db.jdbc.url=jdbc:mysql://localhost:3306/tenants
+#common.db.username=root
+#common.db.password=
+
+#user.db.driver.class=com.mysql.jdbc.Driver
+#user.db.jdbc.url=jdbc:mysql://localhost:3306
+#user.db.username=root
+#user.db.password=
+
 common.db.driver.class=com.mysql.jdbc.Driver
-common.db.jdbc.url=jdbc:mysql://localhost:3306/tenants
+common.db.jdbc.url=jdbc:mysql://ec2-34-216-127-104.us-west-2.compute.amazonaws.com/tenants
 common.db.username=root
-common.db.password=
+common.db.password=root@12345
 
 user.db.driver.class=com.mysql.jdbc.Driver
-user.db.jdbc.url=jdbc:mysql://localhost:3306
+user.db.jdbc.url=jdbc:mysql://ec2-34-216-127-104.us-west-2.compute.amazonaws.com
 user.db.username=root
-user.db.password=
-
-#common.db.driver.class=com.mysql.jdbc.Driver
-#common.db.jdbc.url=jdbc:mysql://ec2-34-216-127-104.us-west-2.compute.amazonaws.com/tenants
-#common.db.username=root
-#common.db.password=root@12345
-#
-#user.db.driver.class=com.mysql.jdbc.Driver
-#user.db.jdbc.url=jdbc:mysql://ec2-34-216-127-104.us-west-2.compute.amazonaws.com
-#user.db.username=root
-#user.db.password=root@12345
+user.db.password=root@12345
 
