--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,8 +33,10 @@
 		</param-value>
 	</context-param>
 
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+		 <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
 
 <listener>
