updated assset code

--- a/pom.xml
+++ b/pom.xml
@@ -456,29 +456,20 @@
     <version>1.2.1</version>
 </dependency>
          <!--swagger-->
- <dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.6.1</version>
-			<scope>compile</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.6.1</version>
-			<scope>compile</scope>
-		</dependency>
-         <dependency>
-        <groupId>org.jsondoc</groupId>
-        <artifactId>jsondoc-springmvc</artifactId>
-        <version>1.2.19</version>
-        </dependency>
-        <dependency>
-        <groupId>org.jsondoc</groupId>
-        <artifactId>jsondoc-ui</artifactId>
-        <version>1.2.19</version>
-
+<dependency>
+   <groupId>io.springfox</groupId>
+   <artifactId>springfox-swagger2</artifactId>
+   <version>2.7.0</version>		
+</dependency>
+<dependency>
+   <groupId>io.springfox</groupId>
+   <artifactId>springfox-swagger-ui</artifactId>
+   <version>2.7.0</version>		
+</dependency> 
+<dependency>
+    <groupId>com.mangofactory</groupId>
+    <artifactId>swagger-springmvc</artifactId>
+    <version>0.8.2</version>
 </dependency>
 	</dependencies>
 	<build>
