--- a/pom.xml
+++ b/pom.xml
@@ -442,11 +442,12 @@
 			<artifactId>javax.ws.rs-api</artifactId>
 			<version>2.0</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
     <groupId>net.bull.javamelody</groupId>
     <artifactId>javamelody-core</artifactId>
     <version>1.69.0</version>
-</dependency>
+</dependency> -->
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
 
         
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
@@ -455,7 +456,6 @@
     <artifactId>config</artifactId>
     <version>1.2.1</version>
 </dependency>
-         <!--swagger-->
 <dependency>
    <groupId>io.springfox</groupId>
    <artifactId>springfox-swagger2</artifactId>
@@ -466,11 +466,11 @@
    <artifactId>springfox-swagger-ui</artifactId>
    <version>2.7.0</version>		
 </dependency> 
-<dependency>
+<!-- <dependency>
     <groupId>com.mangofactory</groupId>
     <artifactId>swagger-springmvc</artifactId>
     <version>0.8.2</version>
-</dependency>
+</dependency> -->
 	</dependencies>
 	<build>
 		<pluginManagement>
@@ -536,7 +536,7 @@
                     </execution>
                 </executions>
             </plugin>
-		   <plugin>
+            <plugin>
     <groupId>com.garethevans.plugin</groupId>
     <artifactId>swagger-codegen-maven-plugin</artifactId>
     <version>2.0</version>
@@ -569,7 +569,7 @@
 							<basePath>/api-doc</basePath>
 							<info>
 								<title>OPS Swagger API</title>
-								<version>v1</version>
+								<version>v2</version>
 								<description>OPS Swagger API</description>
 							</info>
 
