--- a/src/main/resources/system-config.properties
+++ b/src/main/resources/system-config.properties
@@ -43,12 +43,12 @@ hibernate.ejb.entitymanager_factory_name=
 #user.db.password=
 
 common.db.driver.class=com.mysql.jdbc.Driver
-common.db.jdbc.url=jdbc:mysql://ec2-34-216-127-104.us-west-2.compute.amazonaws.com/tenants
+common.db.jdbc.url=jdbc:mysql://ec2-18-221-127-238.us-east-2.compute.amazonaws.com/tenants
 common.db.username=root
-common.db.password=root@12345
+common.db.password=ops365account
 
 user.db.driver.class=com.mysql.jdbc.Driver
-user.db.jdbc.url=jdbc:mysql://ec2-34-216-127-104.us-west-2.compute.amazonaws.com
+user.db.jdbc.url=jdbc:mysql://ec2-18-221-127-238.us-east-2.compute.amazonaws.com
 user.db.username=root
-user.db.password=root@12345
+user.db.password=ops365account
 
