--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.R.File=G://Software//apache-tomcat-7.0.78//logs//pms//pms.log 
-log4j.appender.R.File=E://Servers//prod-server//logs//pms//pms.log
+log4j.appender.R.File=C://server/apache-tomcat-7.0.84//logs//pms//pms.log 
+#log4j.appender.R.File=E://Servers//prod-server//logs//pms//pms.log
 log4j.rootLogger=DEBUG, stdout, R
 log4j.appender.R.MaxFileSize=5000KB
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
